--- a/index.css
+++ b/index.css
@@ -219,7 +219,21 @@
 
     --color-background: var(--color-primary-100);
     --color-foreground: var(--color-primary-900);
-    --color-separator: var(--color-primary-700);
+    --color-elevation-1: color-mix(
+        in oklch,
+        var(--color-primary-200) 20%,
+        transparent
+    );
+
+    --color-muted: var(--primary-300);
+    --color-muted-foreground: var(--primary-800);
+    --color-card: var(--color-elevation-1);
+    --color-separator: color-mix(
+        in oklch,
+        var(--color-primary-400) 20%,
+        transparent
+    );
+    --color-border: var(--color-separator);
 }
 
 @layer base {
@@ -261,5 +275,13 @@
 }
 
 @utility btn {
-    @apply inline-flex items-center clickable h-12 border border-separator px-3 text-base transition-all;
+    @apply inline-flex gap-2 items-center clickable h-9 px-3 text-base transition-all [&_svg:not([class*='size-'])]:size-4;
+}
+
+@utility btn--primary {
+    @apply bg-foreground/20 text-foreground;
+}
+
+@utility btn--outline {
+    @apply border bg-foreground/10 aria-expanded:bg-foreground/10 aria-expanded:text-foreground;
 }
